# routes/api.php
@@ -29,5 +29,6 @@ Route::middleware('auth:sanctum')->group(function () {
 
     Route::controller(ArticleController::class)->group(function () {
         Route::get('articles', 'index')->name('articles.index');
+        Route::get('articles/{article}', 'show')->name('articles.show');
     });
 });
